HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DuplicateClassProcedureName/Expected.uv
//! Expected diagnostic metadata for the DuplicateClassProcedureName rejected-source specimen.

expectedDiagnostic("E-TYP-2500", "rule.14.WF-Class")
